--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,7 @@
             const cost = parseFloat(costInput.value);
             if (cost && selectedPrice) {
                 const chickenOverRice = cost / selectedPrice;
-                resultDiv.textContent = `This item costs ${chickenOverRice.toFixed(2)} chicken over rice.`;
+                resultDiv.textContent = `This purchase costs ${chickenOverRice.toFixed(2)} chicken over rice.`;
             } else {
                 resultDiv.textContent = '';
             }
